package com.healthcare.notification.models;

public class NotificationResponse {
    private boolean success;
    private String message;
    private String timestamp;

    public NotificationResponse() {
    }

    public NotificationResponse(boolean success, String message, String timestamp) {
        this.success = success;
        this.message = message;
        this.timestamp = timestamp;
    }

    public boolean isSuccess() {
        return success;
    }

    public void setSuccess(boolean success) {
        this.success = success;
    }

    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }

    public String getTimestamp() {
        return timestamp;
    }

    public void setTimestamp(String timestamp) {
        this.timestamp = timestamp;
    }
}
