@startuml Classes Notification Service

skinparam backgroundColor white
title Notification Service - Structure

class NotificationRequest {
    type : String
    destination : String
    subject : String
    message : String
}

class NotificationResponse {
    success : boolean
    message : String
    timestamp : String
}

class AppointmentEvent {
    id : Long
    docteurId : Long
    patientEmail : String
    dateHeure : LocalDateTime
    motif : String
}

class AppointmentEventListener {
    + handleAppointmentCreated(event)
    + handleAppointmentUpdated(event)
    + handleAppointmentCancelled(event)
}

class NotificationService {
    + sendNotification(request)
    - sendSms(destination, message)
    - sendEmail(destination, subject, message)
}

class ResendClient {
    + sendEmail(from, to, subject, html)
}

AppointmentEventListener --> AppointmentEvent
AppointmentEventListener --> NotificationService
NotificationService --> NotificationRequest
NotificationService --> NotificationResponse
NotificationService --> ResendClient

note right of AppointmentEventListener
  @RabbitListener
  Consomme les événements
  RDV depuis RabbitMQ
end note

note right of ResendClient
  Client HTTP pour
  l'API Resend
  Envoi d'emails réels
end note

@enduml
